2004-11-26 16:14  fredo

	* lib/PDF/API2/Resource/Font/SynFont.pm: fixed docs

2004-11-26 16:10  fredo

	* lib/PDF/API2/Resource/Font/SynFont.pm: added spacer mod option

2004-11-26 02:25  fredo

	* lib/PDF/API2/Resource/Font.pm: added unicode block mapping

2004-11-26 02:24  fredo

	* lib/PDF/API2/Resource/Font/CoreFont/webdings.pm: fixed unicode
	  mapping

2004-11-26 00:51  fredo

	* lib/PDF/API2/Resource/UniFont.pm: added -encode option and
	  handling

2004-11-26 00:50  fredo

	* lib/PDF/API2/Resource/Font.pm: fixed unicode maps for unmapped
	  corefonts

2004-11-25 21:53  fredo

	* lib/PDF/API2/Content.pm: fixed unifont registration

2004-11-25 20:56  fredo

	* lib/PDF/API2/UniWrap.pm: genesis

2004-11-25 20:55  fredo

	* MANIFEST: added uniwrap

2004-11-25 16:30  fredo

	* lib/PDF/API2/Basic/: PDF/File.pm, PDF/Filter.pm, PDF/Objind.pm,
	  TTF/Coverage.pm, TTF/Font.pm, TTF/Table.pm: fixed explicit
	  release on scalar

2004-11-25 16:07  fredo

	* lib/PDF/API2/Resource/CIDFont/CJKFont.pm: fixed prototype warning

2004-11-24 21:13  fredo

	* MANIFEST: added unifont

2004-11-24 21:12  fredo

	* TODO: update

2004-11-24 21:11  fredo

	* lib/PDF/API2/Resource/UniFont.pm: genesis

2004-11-24 21:10  fredo

	* lib/PDF/API2/Resource/: BaseFont.pm, CIDFont.pm, Font.pm: added
	  virtual font handling

2004-11-24 21:10  fredo

	* lib/PDF/API2/Content.pm: added virtual font handling, fixed var
	  shadow bug

2004-11-24 21:09  fredo

	* lib/PDF/API2.pm: added unifont

2004-11-22 22:07  fredo

	* lib/PDF/API2/Resource/: CIDFont.pm, CIDFont/CJKFont.pm,
	  CIDFont/TrueType.pm, CIDFont/TrueType/FontFile.pm: fixed
	  multibyte-encoding support to work consistently acress
	  cjk/ttf/otf

2004-11-22 17:07  fredo

	* MANIFEST: added TODO + uniglyph.txt

2004-11-22 17:07  fredo

	* TODO: genesis

2004-11-22 03:34  fredo

	* lib/PDF/API2/Util.pm: moved unicode+glyphs to better maintainable
	  uniglyph.txt

2004-11-22 03:31  fredo
